update: optimize bg-image, fixed gap, added id

--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -34,3 +34,15 @@
 .videoWrapper {
   @apply border-accent border rounded-10 relative w-full md:w-[calc(50%-10px)] h-[calc(((min(100vw,480px)-40px)/280)*191)] md:h-[227px] xl:h-[428px] overflow-hidden md:mb-3;
 }
+
+.freeClassSection {
+  @apply bg-[url('/images/free-bg-xl.webp')] overflow-hidden bg-cover bg-free py-10 md:py-20;
+}
+
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .freeClassSection {
+    @apply bg-[url('/images/free-bg-xl-x2.webp')];
+  }
+}
